finish migration.
