# app.js
@@ -18,7 +18,7 @@ SwaggerRestify.create(config, function(err, swaggerRestify) {
   var port = process.env.PORT || 10010;
   app.listen(port);
 
-  if (swaggerRestify.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-  }
+  // if (swaggerRestify.runner.swagger.paths['/hello']) {
+  //   console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
+  // }
 });
